src/objects/BGCK__Page__c.object
<CustomObject>
    <fields>
        <fullName>BGCK__Checklist_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Checklist Version</label>
        <referenceTo>BGCK__Checklist_Version__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BGCK__Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGCK__Object_Field__c</fullName>
        <label>Object Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Object_Value__c</fullName>
        <label>Object Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGCK__Type__c</fullName>
        <inlineHelpText>The first page for a new checklist should be of &apos;Title&apos; type.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Section</fullName>
                    <default>true</default>
                    <label>Section</label>
                </value>
                <value>
                    <fullName>Wizard</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Sub-Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_of_Checklist_version__c</fullName>
        <externalId>true</externalId>
        <label>External ID of Checklist version</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>BGCK__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>BGCK__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>